# todo-web-app

./: .env  Cargo.toml  README.md  script.ps1
src/: api.rs  application.rs  error.rs  main.rs  router.rs  utils.rs
views/: 404.html  index.html
