[package]
name = "todo-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
